--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ venv/
 issues.json
 lib
 draft-hong-t2trg-iot-edge-computing.xml
+background-draft/draft-defoy-t2trg-iot-edge-computing-background.xml
 
 .targets.mk
 
